--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,10 @@
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
-
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-web</artifactId>
+		</dependency>
 
         <dependency>
         	<groupId>org.springframework.boot</groupId>
