--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,24 @@
 version: 2
 jobs:
   build:
-    docker: # See https://docs.docker.com/get-started/#docker-concepts if you are new to Docker.
-      - image: circleci/ruby:2.4.1
+#    docker:
+#      - image: circleci/ruby:2.4.2-jessie-node
+    machine: true
     steps:
       - checkout
-      - run: echo "A first hello"
+#      - run: 
+#          name: docker compose build
+#          command: docker compose build
+      - run: 
+          name: docker compose up
+          command: docker-compose up -d --build
+      - run: 
+          name: sleep 30 sec
+          command: sleep 30s
+      - run: 
+          name: mvn test
+          command: mvn test
+      - run: 
+          name: docker-compose down
+          command: docker-compose down
+          
